Cambios en las Paginas 1, 2, 3, 4
Se hicieron los cambios sugeridos

--- a/Pagina1.html
+++ b/Pagina1.html
@@ -139,7 +139,7 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/Manzana1.png" class="card-img" alt="Producto 1">
+                    <img src="img/manzana.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
                         <h5 class="card-title">Manzana Roja</h5>
                         <p class="card-text">Manzana Roja</p>
@@ -150,10 +150,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/Manzana1.png" class="card-img" alt="Producto 1">
+                    <img src="img/banano.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Banano</h5>
+                        <p class="card-text">Banano</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -161,10 +161,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/Manzana1.png" class="card-img" alt="Producto 1">
+                    <img src="img/uva.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Uvas</h5>
+                        <p class="card-text">Uvas</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -172,10 +172,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/Manzana1.png" class="card-img" alt="Producto 1">
+                    <img src="img/kiwi.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Kiwi</h5>
+                        <p class="card-text">Kiwi</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -183,10 +183,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/Manzana1.png" class="card-img" alt="Producto 1">
+                    <img src="img/mwlon.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Melon</h5>
+                        <p class="card-text">Melon</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -194,10 +194,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/Manzana1.png" class="card-img" alt="Producto 1">
+                    <img src="img/sandia.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Sandia</h5>
+                        <p class="card-text">Sandia</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -205,10 +205,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/Manzana1.png" class="card-img" alt="Producto 1">
+                    <img src="img/arandanos.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Arandanos</h5>
+                        <p class="card-text">Arandanos</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -216,10 +216,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/Manzana1.png" class="card-img" alt="Producto 1">
+                    <img src="img/piña.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Piña</h5>
+                        <p class="card-text">Piña</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
