--- a/pagina2.html
+++ b/pagina2.html
@@ -139,10 +139,10 @@
 
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/zanahoria.jpeg" class="card-img" alt="Producto 1">
+                    <img src="img/zanahoria.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Zanahoria</h5>
+                        <p class="card-text">Zanahoria</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -150,10 +150,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/zanahoria.jpeg" class="card-img" alt="Producto 1">
+                    <img src="img/brocoli.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Brocoli</h5>
+                        <p class="card-text">Brocoli</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -161,10 +161,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/zanahoria.jpeg" class="card-img" alt="Producto 1">
+                    <img src="img/esparrago.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Esparragos</h5>
+                        <p class="card-text">Esparragos</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -172,10 +172,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/zanahoria.jpeg" class="card-img" alt="Producto 1">
+                    <img src="img/espinaca.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Espinaca</h5>
+                        <p class="card-text">Espinaca</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -183,10 +183,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/zanahoria.jpeg" class="card-img" alt="Producto 1">
+                    <img src="img/cebolla.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Cebolla</h5>
+                        <p class="card-text">Cebolla</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -194,10 +194,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/zanahoria.jpeg" class="card-img" alt="Producto 1">
+                    <img src="img/kale.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Kale</h5>
+                        <p class="card-text">Kale</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -205,10 +205,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/zanahoria.jpeg" class="card-img" alt="Producto 1">
+                    <img src="img/chayote.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Chayote</h5>
+                        <p class="card-text">Chayote</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -216,10 +216,12 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/zanahoria.jpeg" class="card-img" alt="Producto 1">
+                    <img src="img/Apio.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Apio</h5>
+                        <p class="card-text">Apio
+                            
+                        </p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
