--- a/pagina3.html
+++ b/pagina3.html
@@ -126,12 +126,12 @@
             <a href="Pagina_principal.html" class="btn-home">Página Principal</a>
             <a href="Pagina1.html">Frutas</a>
             <a href="pagina2.html">Verduras</a>
-            <a href="#">Vegetales</a>
-            <a href="pagina3.html">Hortalizas</a>
+            <a href="pagina3.html">Vegetales</a>
+            <a href="pagina4.html">Hortalizas</a>
             <a href="Carrito.html">Carrito</a>
             <a href="Contacto.html">Contacto</a>
         </div>
-        <h1>Hortalizas</h1>
+        <h1>Vegetales</h1>
     </div>
 
     <div class="container mt-5 product-container">
@@ -139,10 +139,10 @@
 
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/coliflor.jpeg" class="card-img" alt="Producto 1">
+                    <img src="img/coliflor.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Coliflor</h5>
+                        <p class="card-text">Coliflor</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -150,10 +150,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/coliflor.jpeg" class="card-img" alt="Producto 1">
+                    <img src="img/colrizada.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Col</h5>
+                        <p class="card-text">Col</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -161,10 +161,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/coliflor.jpeg" class="card-img" alt="Producto 1">
+                    <img src="img/alcachofaa.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Alcachofa</h5>
+                        <p class="card-text">Alcachofa</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -172,10 +172,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/coliflor.jpeg" class="card-img" alt="Producto 1">
+                    <img src="img/nabo.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Nabo</h5>
+                        <p class="card-text">Nabo</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -183,10 +183,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/coliflor.jpeg" class="card-img" alt="Producto 1">
+                    <img src="img/pimientos.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Pimientos</h5>
+                        <p class="card-text">Pimientos</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -194,10 +194,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/coliflor.jpeg" class="card-img" alt="Producto 1">
+                    <img src="img/remolacha.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Remolacha</h5>
+                        <p class="card-text">Remolacha</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -205,10 +205,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/coliflor.jpeg" class="card-img" alt="Producto 1">
+                    <img src="img/guisantes.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Guisantes</h5>
+                        <p class="card-text">Guisantes</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
@@ -216,10 +216,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/coliflor.jpeg" class="card-img" alt="Producto 1">
+                    <img src="img/camote.png" class="card-img" alt="Producto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Manzana Roja</h5>
-                        <p class="card-text">Manzana Roja</p>
+                        <h5 class="card-title">Camote</h5>
+                        <p class="card-text">Camote</p>
                         <p class="card-price">$1</p>
                         <button class="btn-add">Agregar</button>
                     </div>
