--- a/pagina4.html
+++ b/pagina4.html
@@ -1,48 +1,51 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
+            font-family: 'Bootstrap Icons', sans-serif;
+            background-color: #f8f9fa;
         }
 
         .header {
-            background-color: #28a745;
+            background-color: #76b752;
             color: #fff;
             text-align: center;
             padding: 5px;
-            font-family: "Lilita One";
+            font-family: 'Bootstrap Icons', sans-serif;
         }
 
         .product-container {
-            max-height: 600px;
-          
+            max-width: 1200px;
+            margin: 0 auto;
         }
 
         .card {
             margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         .card img {
-            max-width: 50%;
+            max-width: 100%;
             height: auto;
-            border-radius: 4px;
-            padding: 20px;
-            align-items: center;
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
         }
 
         .card-body {
-            display: flex;
-            flex-direction: column;
+            padding: 20px;
+            text-align: center;
         }
 
         .card-title {
-            font-size: 18px;
-            margin-top: 10px;
+            font-size: 16px;
+            margin-bottom: 10px;
         }
 
         .card-text {
@@ -51,25 +54,25 @@
         }
 
         .card-price {
-            font-size: 18px;
+            font-size: 16px;
             font-weight: bold;
-            color: #08c40b;
+            color: #76b752;
+            margin-bottom: 15px;
         }
 
-        .col-md-4{
+        .col-md-3 {
             display: flex;
             justify-content: center;
         }
-        
-        .btnadd{
-            background-color: #08c40b;
-            border-radius: 10px;
+
+        .btn-add {
+            background-color: #76b752;
+            border-radius: 4px;
             font-family: "Lilita One";
             color: #fff;
+            padding: 8px 16px;
+            font-size: 14px;
         }
-
-
-
 
         .toggle {
             position: fixed;
@@ -91,7 +94,7 @@
             top: 0;
             left: -250px;
             padding-top: 60px;
-            background-color: #4CAF50;
+            background-color: #76b752;
             color: white;
             text-align: center;
             transition: 0.5s;
@@ -113,78 +116,118 @@
         }
     </style>
 
-    <title>Verdulera - Tienda de productos</title>
+    <title>Verduleria - Tienda de productos</title>
 </head>
+
 <body>
     <button class="toggle" onclick="toggleSidebar()">☰</button>
     <div class="header">
         <div class="sidebar" id="mySidebar">
-            <a href="#">Frutas</a>
-            <a href="#">Verduras</a>
-            <a href="#">Vegetales</a>
-            <a href="#">Hortalizas</a>
-            <a href="#">Carrito</a>
-            <a href="#">Contacto</a>
+            <a href="Pagina_principal.html" class="btn-home">Página Principal</a>
+            <a href="Pagina1.html">Frutas</a>
+            <a href="pagina2.html">Verduras</a>
+            <a href="pagina3.html">Vegetales</a>
+            <a href="pagina4.html">Hortalizas</a>
+            <a href="Carrito.html">Carrito</a>
+            <a href="Contacto.html">Contacto</a>
         </div>
         <h1>Hortalizas</h1>
     </div>
 
-       <div class="container mt-5">
+    <div class="container mt-5 product-container">
         <div class="row">
-            <div class="col-md-12 product-container">
+
+            <div class="col-md-3">
                 <div class="card">
-                    <div class="row no-gutters">
-                        <div class="col-md-4">
-                            <img src="img/rabano.png" class="card-img" alt="Producto 1">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Rabano</h5>
-                                <p class="card-text">Rabano Fresca</p>
-                                <p class="card-price">$4</p>
-                                <button class="btnadd">Agregar al carrito</button>
-                            </div>
-                        </div>
+                    <img src="img/papas.png" class="card-img" alt="Producto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Papas</h5>
+                        <p class="card-text">Papas</p>
+                        <p class="card-price">$1</p>
+                        <button class="btn-add">Agregar</button>
                     </div>
                 </div>
-
-                <div class="card">
-                    <div class="row no-gutters">
-                        <div class="col-md-4">
-                            <img src="img/repollo.jpg" class="card-img" alt="Producto 2">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Repollo</h5>
-                                <p class="card-text">Repollo Fresco</p>
-                                <p class="card-price">$5</p>
-                                <button class="btnadd">Agregar al carrito</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="row no-gutters">
-                        <div class="col-md-4">
-                            <img src="img/alcachofa.jpg" class="card-img" alt="Producto 2">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Alcachofa</h5>
-                                <p class="card-text">Alcachofa </p>
-                                <p class="card-price">$4</p>
-                                <button class="btnadd">Agregar al carrito</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
             </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/calabacín.png" class="card-img" alt="Producto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Calabacín</h5>
+                        <p class="card-text">Calabacín</p>
+                        <p class="card-price">$1</p>
+                        <button class="btn-add">Agregar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/rabano.png" class="card-img" alt="Producto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Rabano</h5>
+                        <p class="card-text">Rabano</p>
+                        <p class="card-price">$1</p>
+                        <button class="btn-add">Agregar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/pepinillos.png" class="card-img" alt="Producto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Pepinillos</h5>
+                        <p class="card-text">Pepinillos</p>
+                        <p class="card-price">$1</p>
+                        <button class="btn-add">Agregar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/calabaza.png" class="card-img" alt="Producto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Calabaza</h5>
+                        <p class="card-text">Calabaza</p>
+                        <p class="card-price">$1</p>
+                        <button class="btn-add">Agregar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/remolacha.png" class="card-img" alt="Producto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Remolacha</h5>
+                        <p class="card-text">Remolacha</p>
+                        <p class="card-price">$1</p>
+                        <button class="btn-add">Agregar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/Berenjena.png" class="card-img" alt="Producto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Berenjena</h5>
+                        <p class="card-text">Berenjena</p>
+                        <p class="card-price">$1</p>
+                        <button class="btn-add">Agregar</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/champiñones.png" class="card-img" alt="Producto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Champiñones</h5>
+                        <p class="card-text">Champiñones</p>
+                        <p class="card-price">$1</p>
+                        <button class="btn-add">Agregar</button>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
@@ -207,4 +250,5 @@
         }
     </script>
 </body>
+
 </html>
