--- a/Pagina_Principal.html
+++ b/Pagina_Principal.html
@@ -204,6 +204,11 @@
 </head>
 
 <body>
+    <header>
+        <div class="text-center">
+            <img src="imagenes/Logo.png" alt="Logo de la página" style="width: 100px; height: 100px;">
+        </div>
+    </header>
 
     <style>
         .icon {
@@ -227,15 +232,21 @@
     <div class="sidebar" id="sidebar">
         <p style="margin-bottom: 0px; font-size: 24px;">Verdulería</p>
         <h2 style="margin-bottom: 30px;">"Come Bien"</h2>
+        <a href="Pagina_Principal.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-house"></i>
+            Inicio</a>
         <a href="Pagina1.html" class="btn btn-primary" style="font-size: 22px;">Frutas</a>
         <a href="pagina2.html" class="btn btn-primary" style="font-size: 22px;">Verduras</a>
-        <a href="pagina3.html" class="btn btn-primary" style="font-size: 22px;">Hortalizas</a>
-        <a href="Historial_Compras.html" class="btn btn-primary" style="font-size: 22px;">Historial de Compras</a>
-        <!-- Nuevo botón para agregar producto -->
-        <a href="producto.html" class="btn btn-primary" style="font-size: 22px;">Agregar Producto</a>
+        <a href="pagina3.html" class="btn btn-primary" style="font-size: 22px;">Vegetales</a>
+        <a href="pagina4.html" class="btn btn-primary" style="font-size: 22px;">Hortalizas</a>
+        <a href="producto.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-clipboard2-plus"></i>
+            Agregar Producto</a>
         <div class="sidebar-bottom">
-            <a href="carrito.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-cart3"></i> Carrito</a>
-            <a href="Contacto.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-telephone"></i> Contacto</a>
+            <a href="carrito.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-cart3"></i>
+                Carrito</a>
+            <a href="Perfil.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-person"></i>
+                Cuenta</a>
+            <a href="Contacto.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-telephone"></i>
+                Contacto</a>
         </div>
     </div>
 
@@ -325,10 +336,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
