--- a/Contacto.html
+++ b/Contacto.html
@@ -9,23 +9,163 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-rI5p+ss5wX8G2H6O0zOv0D7yYaz2cseFgihWZ3h5PHWiDS5LXXY2OrON6zfv5uPCeN02+rNA5K3S2f0pPf0km5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        body {
+            background-color: #f5f5f5;
+            font-family: 'Arial', sans-serif;
+        }
+
+        .container {
+            margin-top: 50px;
+        }
+
+        label {
+            color: #333;
+        }
+
+        .btn-primary-g {
+            background-color: #76b752;
+            border: 1px solid #76b752;
+        }
+
+
+        .btn-primary:hover {
+            background-color: #45a050;
+            border: 1px solid #45a050;
+        }
+
+        .btn-dark {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            z-index: 2;
+        }
+
+        .sidebar {
+            height: 100%;
+            width: 250px;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            left: -250px;
+            background-color: #76b752;
+            padding-top: 30px;
+            color: white;
+            text-align: center;
+            transition: 0.5s;
+        }
+
+        .sidebar a {
+            padding: 8px 8px 8px 32px;
+            text-decoration: none;
+            font-size: 18px;
+            color: white;
+            display: block;
+            transition: 0.3s;
+            text-align: left;
+            margin-bottom: 5px;
+            margin-top: 5px;
+        }
+
+        .sidebar a:hover {
+            color: #f1f1f1;
+        }
+
+        .sidebar-bottom {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+        }
+
+        .sidebar a.btn-primary {
+            width: 100%;
+            margin-top: 5px;
+        }
+
+        .card {
+            background-color: #d9fada;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .circle-card {
+            background-color: #ffffff;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            overflow: hidden;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            position: relative;
+        }
+    </style>
+    <script src="https://kit.fontawesome.com/xxxxxxxxxx.js" crossorigin="anonymous"></script>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var topButtons = document.querySelector('.top-buttons');
+            var prevScrollPos = window.pageYOffset;
+
+            window.onscroll = function () {
+                var currentScrollPos = window.pageYOffset;
+
+                if (prevScrollPos > currentScrollPos) {
+                    topButtons.style.top = "10px";
+                } else {
+                    topButtons.style.top = "-60px";
+                }
+
+                prevScrollPos = currentScrollPos;
+            };
+        });
+
+        function toggleSidebar() {
+            var sidebar = document.getElementById('sidebar');
+            var content = document.querySelector('.content');
+
+            if (sidebar.style.left === '0px') {
+                sidebar.style.left = '-250px';
+                content.style.marginLeft = '0';
+            } else {
+                sidebar.style.left = '0px';
+                content.style.marginLeft = '250px';
+            }
+        }
+    </script>
 </head>
 
 <body style="background-color: #e3f2e8;">
     <header>
         <div class="text-center">
-            <img src="imagenes/Logo.png" alt="Logo de la página" style="width: 100px; height: 100px;">
+            <a href="Pagina_Principal.html">
+                <img src="imagenes/Logo.png" alt="Logo de la página" style="width: 100px; height: 100px;">
+            </a>
             <h2>Come Bien</h2>
         </div>
     </header>
-    <!-- Agregado: Botón para volver al menú principal -->
-    <div class="row mt-3">
-        <div class="col-md-12 text-center">
-            <a href="Pagina_Principal.html" class="btn btn-secondary">Volver al Menú Principal</a>
+    <button class="btn btn-dark" onclick="toggleSidebar()">☰</button>
+
+    <div class="sidebar" id="sidebar">
+        <p style="margin-bottom: 0px; font-size: 24px;">Verdulería</p>
+        <h2 style="margin-bottom: 30px;">"Come Bien"</h2>
+        <a href="Pagina_Principal.html" class="btn btn-primary-g" style="font-size: 22px;"><i class="bi bi-house"></i>
+            Inicio</a>
+        <a href="Pagina1.html" class="btn btn-primary-g" style="font-size: 22px;">Frutas</a>
+        <a href="pagina2.html" class="btn btn-primary-g" style="font-size: 22px;">Verduras</a>
+        <a href="pagina3.html" class="btn btn-primary-g" style="font-size: 22px;">Vegetales</a>
+        <a href="pagina4.html" class="btn btn-primary-g" style="font-size: 22px;">Hortalizas</a>
+        <div class="sidebar-bottom">
+            <a href="carrito.html" class="btn btn-primary-g" style="font-size: 22px;"><i class="bi bi-cart3"></i>
+                Carrito</a>
+            <a href="Perfil.html" class="btn btn-primary-g" style="font-size: 22px;"><i class="bi bi-person"></i>
+                Cuenta</a>
+            <a href="Contacto.html" class="btn btn-primary-g" style="font-size: 22px;"><i class="bi bi-telephone"></i>
+                Contacto</a>
         </div>
     </div>
-    </div>
-
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-6">
@@ -91,9 +231,14 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 </body>
 
