--- a/Perfil.html
+++ b/Perfil.html
@@ -120,7 +120,9 @@
 <body style="background-color: #e3f2e8;">
     <header>
         <div class="text-center">
-            <img src="imagenes/Logo.png" alt="Logo de la página" style="width: 100px; height: 100px;">
+            <a href="index.html">
+                <img src="imagenes/Logo.png" alt="Logo de la página" style="width: 100px; height: 100px;">
+            </a>
             <h2>Come Bien</h2>
         </div>
     </header>
@@ -129,13 +131,17 @@
     <div class="sidebar" id="sidebar">
         <p style="margin-bottom: 0px; font-size: 24px;">Verdulería</p>
         <h2 style="margin-bottom: 30px;">"Come Bien"</h2>
-        <a href="Pagina_Principal.html" class="btn btn-primary" style="font-size: 22px;">Página Principal</a>
+        <a href="index.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-house"></i>
+            Inicio</a>
         <a href="Pagina1.html" class="btn btn-primary" style="font-size: 22px;">Frutas</a>
         <a href="pagina2.html" class="btn btn-primary" style="font-size: 22px;">Verduras</a>
-        <a href="pagina3.html" class="btn btn-primary" style="font-size: 22px;">Hortalizas</a>
+        <a href="pagina3.html" class="btn btn-primary" style="font-size: 22px;">Vegetales</a>
+        <a href="pagina4.html" class="btn btn-primary" style="font-size: 22px;">Hortalizas</a>
         <div class="sidebar-bottom">
             <a href="carrito.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-cart3"></i>
                 Carrito</a>
+            <a href="Perfil.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-person"></i>
+                Cuenta</a>
             <a href="Contacto.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-telephone"></i>
                 Contacto</a>
         </div>
