--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <div class="sidebar" id="sidebar">
         <p style="margin-bottom: 0px; font-size: 24px;">Verdulería</p>
         <h2 style="margin-bottom: 30px;">"Come Bien"</h2>
-        <a href="Pagina_Principal.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-house"></i>
+        <a href="index.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-house"></i>
             Inicio</a>
         <a href="Pagina1.html" class="btn btn-primary" style="font-size: 22px;">Frutas</a>
         <a href="pagina2.html" class="btn btn-primary" style="font-size: 22px;">Verduras</a>
