--- a/pagina4.html
+++ b/pagina4.html
@@ -203,7 +203,7 @@
     </div>
     <header>
         <div class="text-center">
-            <a href="Pagina_Principal.html">
+            <a href="index.html">
                 <img src="imagenes/Logo.png" alt="Logo de la página" style="width: 100px; height: 100px;">
             </a>
             <h2>Come Bien</h2>
@@ -214,7 +214,7 @@
     <div class="sidebar" id="sidebar">
         <p style="margin-bottom: 0px; font-size: 24px;">Verdulería</p>
         <h2 style="margin-bottom: 30px;">"Come Bien"</h2>
-        <a href="Pagina_Principal.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-house"></i>
+        <a href="index.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-house"></i>
             Inicio</a>
         <a href="Pagina1.html" class="btn btn-primary" style="font-size: 22px;">Frutas</a>
         <a href="pagina2.html" class="btn btn-primary" style="font-size: 22px;">Verduras</a>
